[gd_scene load_steps=2 format=3 uid="uid://04dcg4f5i2pn"]

[ext_resource type="Script" path="res://Scene/GameOver/game_over.gd" id="1_6cefu"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cefu")
prison_scene = "res://Scene/PrisonScene/prison_scene.tscn"

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="GameOverLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(800, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center][color=red][shake level=10]GAME OVER[/shake][/color][/center]"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 114.0
offset_top = 153.0
offset_right = 337.0
offset_bottom = 222.0
mouse_filter = 1
theme_override_font_sizes/font_size = 50
text = "End Time
00:00:53"

[node name="TipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -173.0
offset_right = 20.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 40
text = "没关系，重新开始就好了。"
horizontal_alignment = 1

[connection signal="gui_input" from="BG" to="." method="_on_bg_gui_input"]
